# csc_490_project

./: .babelrc  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  asset-manifest.json  build.gradle.kts  index.html  package-lock.json  package.json  settings.gradle.kts  tsconfig.json
.github/workflows/: node.js.yml  production_CSC490Server.yml  production_csc490.yml
config/: paths.js
server/: build.gradle.kts  gradle.properties
src/: App.test.tsx  App.tsx  CodeEditor.tsx  main.cpp  rendering_engine.cpp  rendering_engine.h  theme.ts
src/data/: reducers.ts  store.ts
src/frontend/: App.css  App.tsx  index.tsx  prism.css
src/graphics/: rendering.ts
src/pages/: Home.tsx  Login.tsx
src/server/: account.go  database.go  go.mod  go.sum  main.go
src/ts/: CodeEditor.tsx
static/css/: main.051c643b.css  main.051c643b.css.map  main.0619b870.css  main.0619b870.css.map  main.0a0c7532.css  main.0a0c7532.css.map  main.379b56af.css  main.379b56af.css.map  main.4b6a0dc5.css  main.4b6a0dc5.css.map  main.55150ea2.css  main.55150ea2.css.map  main.577ae1fc.css  main.577ae1fc.css.map  main.5d5fb5e4.css  main.5d5fb5e4.css.map  main.6351312d.css  main.6351312d.css.map  main.89b7745a.css  main.89b7745a.css.map  main.92d5d844.css  main.92d5d844.css.map  main.9b192376.css  main.9b192376.css.map  main.d3e930d0.css  main.d3e930d0.css.map  main.e6c13ad2.css.map  main.f0d25252.css  main.f0d25252.css.map  main.f9db1218.css  main.f9db1218.css.map
static/js/: 787.d8f8bb71.chunk.js  787.d8f8bb71.chunk.js.map  main.0b7e8a44.js  main.0b7e8a44.js.map  main.0e1928ec.js  (+89 more)
(+58 files in other folders)
